# Operating-Systems

./: .gitignore  CMakeLists.txt  README.md  dining.sln
dining/: Chopstick.cpp  Chopstick.hpp  Logic.cpp  Logic.hpp  OutputCoords.hpp  Philosopher.cpp  Philosopher.hpp  Random.cpp  Random.hpp  State.hpp  Table.cpp  Table.hpp  TableSetup.cpp  TableSetup.hpp  Talk.cpp  Talk.hpp  UI.cpp  UI.hpp  dining.vcxproj  dining.vcxproj.filters  main.cpp
